/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package commontype;

option java_multiple_files = true;
option java_package = "org.apache.bifromq.type";
option java_outer_classname = "ClientInfoProto";
option optimize_for = SPEED;

message ClientInfo{
  string tenantId = 1;
  string type = 2; // the type of the calling client could be external user client or internal service
  map<string, string> metadata = 3; // the metadata of the client
}